# aliases_managment

./: .env  .env.dist  .gitignore  README.md  makefile  pyproject.toml
aliasesmgt/: .env  __init__.py  main.py
alises/: bash_aliases_personal  bash_aliases_system  bash_aliases_work
app/: alias.py  display.py  utils.py
app/backup/: backupengine.py
app/command/: __init__.py  cli.py  main.py
app/update/: __init__.py  updateengine.py
